# look-ahead-items

./: Cargo.toml  README.md
examples/: example.rs
src/: character.rs  items.rs  items_builder.rs  lib.rs  look_ahead_characters.rs  look_ahead_items.rs  main.rs  text.rs  text_builder.rs
src/look_ahead_items/: items.rs  items_builder.rs  look_ahead_items.rs  mod.rs
src/look_ahead_text/: look_ahead_characters.rs  mod.rs  text.rs  text_builder.rs
src/model/: character.rs  character_line.rs  look_ahead_characters.rs  mod.rs  text.rs
src/parser/: character_line_p.rs  document_p.rs  mod.rs  number_p.rs  text_p.rs
